--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fleet</title>
   </head>
-  <body class="text-primary">
+  <body class="text-primary max-w-[90rem] mx-auto">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
